--- a/css/mainContent.css
+++ b/css/mainContent.css
@@ -1,15 +1,34 @@
 #main-content {
     width: 780px;
     float: left;
+    margin-left: 30px;
 }
 #news {
-    margin-left: 20px;
+    margin-left: 180px;
     float: left;
-    width: 180px;
+    width: 250px;
 }
 .floatLeft {
   float: left;
+  margin-right: 20px;
 }
 #bottomPadding {
   margin-bottom: 200px;
+  text-indent: 50px;
+}
+ .pMargin {
+  margin-top: 150px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+#title1 {
+  font-size: 30px;
+  font-family: cursive;
+  text-align: center;
+}
+#title2{
+  text-align: left;
+  font-size: 30px;
+  margin-left: 10px;
+  font-family: cursive;
 }
