--- a/css/mainContent.css
+++ b/css/mainContent.css
@@ -39,8 +39,11 @@
 .news-article p {
   margin-top: 50px;
   text-indent: 22px;
+  margin-left: 7px;
+  margin-right: 7px;
 }
 .news-article h3{
+  font-size: 20px;
   text-decoration: underline;
   text-align: center;
   font-weight: bold;
