--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,39 @@
-table, td {
-    border-collapse: collapse;
-    
+#header-box{
+  width:100%; 
+  height:230px; 
+background-image: url(/home/mnixon/Sites/birthdayPage/images/headerImg.jpg)
 }
-
-td  a {
-color: white;
-text-decoration: none;
+#navbar {
+   margin-left: 700px;
+   display:block;
+}
+nav a {
+  float:left;
+  margin-right: 15px;
+  color:white;
+  text-decoration: none;
+}
+nav:hover {
+  font-weight:bold;
+}
+h2 {
+  font-size:1.3em;
+  color:white;
+  font-family: cursive; 
+  font-weight: bold; 
+   padding-left: 600px;
+   margin-top:-25px;
+   padding-bottom: 25px;
+   
+  
+}
+h1 {
+  font-size: 4em; 
+  color:white;
+  font-family: cursive; 
+  font-weight: bold; 
+  text-align: center;
+  padding-right: 200px;
+  padding-top: 20px;
+ 
 }
