--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,11 @@
 #header-box{
   width:100%; 
   height:230px; 
-background-image: url(/home/mnixon/Sites/birthdayPage/images/headerImg.jpg)
+background-image: url(/home/mnixon/Sites/birthdayPage/images/headerImg.jpg);
+ margin-top: 0px;
+ position: absolute;
+
+
 }
 #navbar {
    margin-left: 700px;
@@ -16,24 +20,25 @@ nav a {
 nav:hover {
   font-weight:bold;
 }
-h2 {
+#header-box h2 {
   font-size:1.3em;
   color:white;
   font-family: cursive; 
   font-weight: bold; 
    padding-left: 600px;
-   margin-top:-25px;
+  
    padding-bottom: 25px;
    
   
 }
-h1 {
+#header-box h1 {
   font-size: 4em; 
   color:white;
   font-family: cursive; 
   font-weight: bold; 
   text-align: center;
   padding-right: 200px;
-  padding-top: 20px;
+   margin-top: 0px;
+ 
  
 }
