--- a/css/semi-bottom.css
+++ b/css/semi-bottom.css
@@ -1,29 +1,34 @@
 #semi-bottom{
   display:block;
   float:right;
-  position: relative;
-  width: 100%;
-  margin-top: 100px;
-  background-color: green;
-
-}
-#semi-article h1{
-  display:block;
-  text-align: center;
-  margin-bottom: 70px;
-  margin-left:250px;
-  margin-right: 250px;
-  padding-top: 35px;
-  padding-bottom: 35px;
-  font-size: 50px;
-  font-family: cursive;
-  text-decoration: dashed;
-  background-color: yellowgreen
-
-}
-.image-align{
-  text-align: center;
-  display: inline-block;
-  margin: 20px 65px 20px 65px;
+   position: relative;
+   width: 100%;
+   margin-top: 0px;
+   background-color: #1d662d
  
-}
+ }
+ #semi-article h1{
+   display:block;
+   text-align: center;
+   margin-bottom: 70px;
+   margin-left:270px;
+   margin-right: 250px;
+   padding-top: 35px;
+   padding-bottom: 35px;
+   font-size: 50px;
+   font-family: cursive;
+   text-decoration: dashed;
+   background-color: #5ba36b;
+   border-radius: 50px;
+   color: whitesmoke;
+ 
+ }
+ .image-align{
+   text-align: center;
+   display: inline-block;
+   margin-left: 60px;
+   margin-right: 60px;
+   color: whitesmoke;
+  
+  
+ }
